Fix CSS Overview 'Send Us your feedback' link color in High Contrast
CSS Overview landing page links are not up to High Contrast color standards. This updates the css for panel feedback to use the correct link colors.

Bug: 1423177

--- a/front_end/ui/components/panel_feedback/panelFeedback.css
+++ b/front_end/ui/components/panel_feedback/panelFeedback.css
@@ -59,7 +59,7 @@ h3 {
 }
 
 x-link { /* stylelint-disable-line selector-type-no-unknown */
-  color: var(--color-primary);
+  color: linktext;
   text-decoration-line: underline;
 }
 
